--- a/scss/sections/_footer.scss
+++ b/scss/sections/_footer.scss
@@ -4,6 +4,13 @@
 .footer {
   padding-top: 1rem;
   background-color: $footer;
+
+  .contact-box-wrapper {
+    @include media-breakpoint-down(sm) {
+      padding-top: 1.5rem;
+      padding-bottom: 1.5rem;
+    }
+  }
 }
 
 // STYLE THE CONTACT BOX CONTENT
