--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1,3 +1,8 @@
+// GLOBAL FONT STYLE
+$font-family-sans-serif: "Poppins", system-ui, -apple-system, "Segoe UI", Roboto,
+  "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif,
+  "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+
 // MY THEME COLORS
 $han-blue-dark: #4864ba;
 $han-blue-light: #b5c1e3;
