--- a/scss/sections/_navbar.scss
+++ b/scss/sections/_navbar.scss
@@ -8,8 +8,20 @@
     width: 100px;
   }
 
+  .navbar-collapse.show {
+    @include media-breakpoint-down(lg) {
+      box-shadow: 0 0.5rem 1rem -0.8rem rgba($black, 0.25);
+      padding-top: 0.5rem;
+      padding-bottom: 1.8rem;
+    }
+  }
+
   li {
-    padding: 0 0.7rem;
+    padding: 0.5rem 0.7rem;
+
+    @include media-breakpoint-down(lg) {
+      border-bottom: 1px solid $white;
+    }
 
     a {
       color: $white;
