--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1,7 +1,5 @@
 // GLOBAL FONT STYLE
-$font-family-sans-serif: "Poppins", system-ui, -apple-system, "Segoe UI", Roboto,
-  "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif,
-  "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+$font-family-sans-serif: "Nunito", sans-serif;
 
 // MY THEME COLORS
 $han-blue-dark: #4864ba;
