Updated template typography and font

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -1,5 +1,6 @@
 // GLOBAL FONT STYLE
-$font-family-sans-serif: "Nunito", sans-serif;
+$font-family-sans-serif: "Poppins", sans-serif;
+$font2-family-sans-serif: "Nunito", sans-serif;
 
 // MY THEME COLORS
 $han-blue-dark: #4864ba;
