--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -3,12 +3,12 @@
 .display-2 {
   margin-bottom: 1rem;
   text-transform: capitalize;
-  font-family: "Poppins", sans-serif;
+  font-family: $font-family-sans-serif;
 
   &--intro {
     display: inline-block;
     font-weight: 700;
-    font-family: "Poppins", sans-serif;
+    font-family: $font-family-sans-serif;
 
     @include media-breakpoint-down(sm) {
       font-size: 2.5rem;
@@ -60,13 +60,13 @@
 
 // DISPLAY 3
 .display-3 {
-  font-family: "Poppins", sans-serif;
+  font-family: $font-family-sans-serif;
 
   &--title {
     font-size: 1.5rem;
     text-transform: capitalize;
     font-weight: 600;
-    font-family: "Poppins", sans-serif;
+    font-family: $font-family-sans-serif;
     display: inline-block;
     background-image: linear-gradient(to right, $primary, $secondary);
     background-clip: text;
