--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10915,6 +10915,10 @@ textarea.form-control-lg {
 .menu .navbar-brand-img {
   width: 100px;
 }
+
+/* .navbar-brand-img{
+  height: 150px;
+} */
 @media (max-width: 991.98px) {
   .menu .navbar-collapse.show {
     box-shadow: 0 0.5rem 1rem -0.8rem rgba(0, 0, 0, 0.25);
