--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3640,7 +3640,7 @@ textarea.form-control-lg {
 .nav-pills {
   --bs-nav-pills-border-radius: 0.375rem;
   --bs-nav-pills-link-active-color: #fff;
-  --bs-nav-pills-link-active-bg: #4864ba;
+  --bs-nav-pills-link-active-bg: #c91f1f;
 }
 .nav-pills .nav-link {
   background: none;
@@ -10877,9 +10877,10 @@ textarea.form-control-lg {
 
 .display-3 {
   font-family: "Poppins", sans-serif;
+  
 }
 .display-3--title {
-  font-size: 1.5rem;
+  font-size: 2.5rem;
   text-transform: capitalize;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
@@ -10910,8 +10911,9 @@ textarea.form-control-lg {
 }
 
 .menu {
-  background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), linear-gradient(to right, rgba(72, 100, 186, 0.95), rgba(143, 184, 222, 0.95));
+  /* background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), linear-gradient(to right, rgba(72, 100, 186, 0.95), rgba(143, 184, 222, 0.95)); */
   /* background: linear-gradient(to right, rgba(72, 100, 186, 0.95), rgba(143, 184, 222, 0.95)); */
+  background-color: #1F1F24;
 }
 .menu .navbar-brand-img {
   width: 100px;
@@ -10942,7 +10944,8 @@ textarea.form-control-lg {
 }
 
 .intro-section {
-  background: linear-gradient(to right, rgba(72, 100, 186, 0.95), rgba(143, 184, 222, 0.95));
+  background-color: #000;
+  /* background: linear-gradient(to right, rgba(72, 100, 186, 0.95), rgba(143, 184, 222, 0.95)); */
   padding: 8rem 0 0 0;
   width: 100%;
   height: 100%;
@@ -11008,7 +11011,7 @@ textarea.form-control-lg {
 
 .services {
   position: relative;
-  padding: 1rem 0;
+  padding: 5rem 0;
 }
 .services__content {
   padding: 1rem;
@@ -11366,3 +11369,37 @@ textarea.form-control-lg {
 }
 
 /*# sourceMappingURL=style.css.map */
+
+.galeria .bg-image {
+  position: relative;
+  overflow: hidden;
+  filter: grayscale(100%);
+}
+
+.galeria .bg-image img {
+  width: 100%;
+  height: auto;
+  transition: transform 0.3s ease-in-out;
+}
+
+.galeria .bg-image:hover img {
+  transform: scale(0.9);
+}
+
+.custom-button {
+  border: 2px solid white;
+  background-color: transparent;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  color: white;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+.custom-button:hover {
+
+  color: white;
+}
+
+
