--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3185,7 +3185,7 @@ textarea.form-control-lg {
   --bs-dropdown-padding-y: 0.5rem;
   --bs-dropdown-spacer: 0.125rem;
   --bs-dropdown-font-size: 1rem;
-  --bs-dropdown-color: #212529;
+  --bs-dropdown-color: #0080ff;
   --bs-dropdown-bg: #fff;
   --bs-dropdown-border-color: var(--bs-border-color-translucent);
   --bs-dropdown-border-radius: 0.375rem;
@@ -11106,7 +11106,7 @@ textarea.form-control-lg {
 }
 
 .portfolio {
-  padding: 4rem 0 7rem 0;
+  padding: 4rem 0 0;
 }
 .portfolio button {
   text-transform: capitalize;
@@ -11123,7 +11123,6 @@ textarea.form-control-lg {
   border-radius: 10px;
   overflow: hidden;
   margin-bottom: 1.2rem;
-  border-top: 0.5rem solid #b5c1e3;
 }
 .portfolio-box img {
   width: 100%;
@@ -11170,7 +11169,7 @@ textarea.form-control-lg {
 }
 
 .get-started {
-  padding: 7rem 0;
+  padding: 4rem 0;
   background-color: #000000;
 }
 @media (max-width: 575.98px) {
