--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11017,7 +11017,7 @@ textarea.form-control-lg {
 
 .services {
   position: relative;
-  padding: 5rem 0;
+  /* padding: 5rem 0; */
 }
 .services__content {
   padding: 1rem;
